// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithImage renders header background image 1`] = `
.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 .c6 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c3 {
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c7 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:1440px) {
  .c5 {
    padding-left: 72px;
    padding-right: 72px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    aria-hidden={true}
    className="c1 c2"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withOverlay prop equaling true is passed 1`] = `
.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 .c6 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c3 {
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c7 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:1440px) {
  .c5 {
    padding-left: 72px;
    padding-right: 72px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--overlay c1 c2"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header background image correctly when a withUnderlay prop equaling true is passed 1`] = `
.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 .c6 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
  background-size: cover;
  background-repeat: no-repeat;
}

.c0 {
  width: 100%;
  position: relative;
}

.c3 {
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c7 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:1440px) {
  .c5 {
    padding-left: 72px;
    padding-right: 72px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    aria-hidden={true}
    className="gradient--underlay c1 c2"
    style={
      Object {
        "backgroundImage": "url(https://placekitten.com/g/2/2)",
      }
    }
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`WithImage renders header with image 1`] = `
.c2 {
  z-index: 1;
  width: 100%;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2.gradient--overlay:after,
.c2.gradient--underlay:after {
  height: 100%;
  content: "";
  top: 0;
  left: 0;
  right: 0;
  position: absolute;
}

.c2.gradient--underlay.gradient--spotlight:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c2:not(.gradient--spotlight).gradient--overlay:after {
  z-index: 2;
  opacity: 0.4;
  background-image: linear-gradient(77deg,rgba(0,0,0,0),#000000);
}

.c2:not(.gradient--spotlight).gradient--underlay:after {
  z-index: -1;
  opacity: 0.8;
  background-image: linear-gradient(76deg,#026cdf,#3ac7ff);
}

.c4 {
  margin: 0 auto;
  max-width: 1440px;
  width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
  margin-left: -8px;
  margin-right: -8px;
}

.c6 .c6 {
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  margin-left: 0;
  margin-right: 0;
}

.c1 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1;
  min-height: 218px;
  max-height: 218px;
}

.c0 {
  width: 100%;
  position: relative;
}

.c3 {
  padding-top: 60px;
  z-index: 2;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  z-index: 2;
}

.c7 {
  box-sizing: border-box;
  padding-right: 8px;
  padding-left: 8px;
  max-width: 100%;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
}

@media screen and (min-width:768px) {
  .c2 {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2 {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--spotlight {
    box-shadow: inset 0 1px 40px 10px rgba(0,0,0,0.15);
  }
}

@media screen and (min-width:768px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2.gradient--underlay.gradient--spotlight:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(82deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--overlay:after {
    background-image: linear-gradient(86deg,rgba(0,0,0,0),#000000);
  }
}

@media screen and (min-width:768px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(80deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:1024px) {
  .c2:not(.gradient--spotlight).gradient--underlay:after {
    background-image: linear-gradient(81deg,#026cdf,#3ac7ff);
  }
}

@media screen and (min-width:768px) {
  .c4 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    margin-left: -12px;
    margin-right: -12px;
  }
}

@media screen and (min-width:1440px) {
  .c5 {
    padding-left: 72px;
    padding-right: 72px;
  }
}

@media screen and (min-width:768px) {
  .c8 {
    padding-top: 60px;
  }
}

@media screen and (min-width:768px) {
  .c7 {
    max-width: 100%;
    padding-right: 12px;
    padding-left: 12px;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1024px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

@media screen and (min-width:1440px) {
  .c7 {
    max-width: 100%;
    -webkit-flex: 0 0 100%;
    -ms-flex: 0 0 100%;
    flex: 0 0 100%;
  }
}

<header
  aria-level="1"
  className="c0"
  role="heading"
>
  <span
    className="c1 c2"
  />
  <div
    className="c3 c4"
  >
    <div
      className="c5 c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <img
            alt="place holder"
            src="https://placekitten.com/g/400/242"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
